--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>IndexPageTest.getStoreTitle()[pri:0, instance:com.Training.testcases.IndexPageTest@78e94dcf]<br/>IndexPageTest.verifyLogo()[pri:0, instance:com.Training.testcases.IndexPageTest@78e94dcf]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>EndToEndTest.endToEndTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@71623278]<br/></td></tr>
 </table>
