--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca61a2">  <td>22/02/08 23:49:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.getStoreTitle()[pri:0, instance:com.Training.testcases.IndexPageTest@78e94dcf]">getStoreTitle</td> 
-  <td>main@2035070981</td>   <td></td> </tr>
-<tr bgcolor="ca61a2">  <td>22/02/08 23:49:15</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexPageTest.verifyLogo()[pri:0, instance:com.Training.testcases.IndexPageTest@78e94dcf]">verifyLogo</td> 
-  <td>main@2035070981</td>   <td></td> </tr>
+<tr bgcolor="f2b07d">  <td>22/02/16 17:40:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.endToEndTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@71623278]">endToEndTest</td> 
+  <td>main@1366025231</td>   <td></td> </tr>
+<tr bgcolor="8991cf">  <td>22/02/16 17:40:27</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Training.testcases.EndToEndTest@71623278]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
