--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f777e8">  <td>22/02/10 16:32:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@2b2948e2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341796579</td>   <td></td> </tr>
-<tr bgcolor="ebc39e">  <td>22/02/10 16:32:16</td>   <td>15904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.endToEndTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@2b2948e2]">endToEndTest</td> 
-  <td>main@341796579</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>22/02/16 22:01:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@2f8f5f62]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@111374580</td>   <td></td> </tr>
+<tr bgcolor="76b367">  <td>22/02/16 22:01:54</td>   <td>26540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.endToEndTest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.Training.testcases.EndToEndTest@2f8f5f62]">endToEndTest</td> 
+  <td>main@111374580</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>22/02/16 22:02:23</td>   <td>55316</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.Training.testcases.EndToEndTest@2f8f5f62]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@111374580</td>   <td></td> </tr>
 </table>
